--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -1,4 +1,17 @@
 .movies {
     display : flex;
     flex-wrap: wrap;
+
 }
+
+.poster-grid {
+    justify-content:center;
+    align-items:center;
+    padding: 3%;
+}
+
+/* .poster {
+
+} */
+
+
