Added functionality so that page refresh maintains details for specific movie.

--- a/src/components/AddMovie/AddMovie.css
+++ b/src/components/AddMovie/AddMovie.css
@@ -5,3 +5,18 @@
     padding: 3%;
    
 }
+
+.btnGroup {
+    margin-top: 4%;
+}
+
+.genreForm {
+    margin-top: 6px;
+}
+
+
+/* .inputForm {
+    justify-content: center;
+    align-items: center;
+    margin: 3%;
+} */
