--- a/src/components/MovieList/MovieList.css
+++ b/src/components/MovieList/MovieList.css
@@ -4,6 +4,10 @@
 
 }
 
+/* .poster {
+
+} */
+
 .poster-grid {
     justify-content:center;
     align-items:center;
@@ -13,6 +17,8 @@
 .image {
     max-width:250px;
     max-height:250px;
+    width: 100%;
+    height: 100%;
 }
 
 
