--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -4,3 +4,13 @@
     padding: 3%;
    
 }
+
+.detail-image {
+    max-width:250px;
+    max-height:250px;
+}
+
+.detailPage {
+    background-color: whitesmoke;
+    padding-bottom: 5%;
+}
